<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="tituloAplicacion">ASTEROIDES</string>
    <string name="app_name">Asteroides</string>
    <string name="Arrancar">Jugar</string>
    <string name="Configurar">Configurar</string>
    <string name="Acercade">Acerca de</string>
    <string name="acercade">acercade</string>
    <string name="Puntuaciones">Puntuaciones</string>


<style
	name="MiEstilo"
	parent="@android:style/TextAppearance.Medium">
	<item name="android:layout_width">fill_parent</item>
	<item name="android:layout_height">wrap_content</item>
	<item name="android:textColor">#00FF00</item>
	<item name="android:typeface">monospace</item>
</style>


</resources>