<?xml version="1.0" encoding="utf-8"?>
<android.gesture.GestureOverlayView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gestures"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fadeOffset="800"
    android:gestureStrokeType="multiple" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:background="@drawable/degradado"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="20dip"
            android:text="@string/tituloAplicacion"
            android:textColor="@color/colordetitulo"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnJugar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Arrancar" >
        </Button>

        <Button
            android:id="@+id/btnConfiguracion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Configurar" >
        </Button>

        <Button
            android:id="@+id/btnAcercaDe"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Acercade" >
        </Button>

        <Button
            android:id="@+id/btnPuntuaciones"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Puntuaciones" >
        </Button>
    </LinearLayout>

</android.gesture.GestureOverlayView>